--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "int32",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Use N-API to compute 32 bits integers. Preserve the property of overflowing.",
   "main": "index.js",
   "scripts": {
-    "test": "node test/mocha --napi-modules --reporter spec"
+    "test": "mocha --napi-modules --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "nodejs"
   ],
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=8.4.0"
   },
   "author": "Magic Len <len@magiclen.org> (https://magiclen.org)",
   "bugs": {
@@ -26,10 +26,10 @@
   "homepage": "https://github.com/magiclen/node-int32#readme",
   "license": "MIT",
   "dependencies": {
-    "bindings": "^1.2.1"
+    "bindings": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
