--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "int32",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "Use N-API to compute 32 bits integers. Preserve the property of overflowing.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --napi-modules --reporter spec"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "nodejs"
   ],
   "engines": {
-    "node": ">=8.4.0"
+    "node": ">=8.6.0"
   },
   "author": "Magic Len <len@magiclen.org> (https://magiclen.org)",
   "bugs": {
@@ -29,7 +29,7 @@
     "bindings": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^4.1.1",
-    "mocha": "^3.5.0"
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3"
   }
 }
