--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/native/artifacts.json
+/native/index.node
 /native/target/
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,intellij+all,rust
