--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,21 @@
 [package]
-name = "node-int32"
-version = "3.0.3"
+name = "int32"
+version = "4.0.0"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2018"
 repository = "https://github.com/magiclen/node-int32"
 homepage = "https://magiclen.org/node-js-int32/"
-keywords = ["node.js", "int32", "overflow"]
+keywords = ["node.js", "int32", "overflow", "underflow"]
 categories = []
 description = "Use Rust to compute 32-bit signed integers and wrap around at the boundary."
-readme = "../README.md"
 license = "MIT"
-include = ["src/**/*", "build.rs", "Cargo.toml", "LICENSE"]
 publish = false
 
 [lib]
-name = "functions"
 crate-type = ["cdylib"]
+codegen-units = 1
 
-[profile.release]
-lto = true
-
-[dependencies]
-neon = "0.8"
-
-[build-dependencies]
-neon-build = "0.8"
+[dependencies.neon]
+version = "0.8"
+default-features = false
+features = ["napi-6"]
