--- a/.eslintrc
+++ b/.eslintrc
@@ -86,7 +86,10 @@
     ],
     "indent": [
       "error",
-      4
+      4,
+      {
+        "SwitchCase": 1
+      }
     ],
     "jsx-quotes": [
       "error",
