--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "int32",
-  "version": "3.0.20",
+  "version": "3.0.21",
   "description": "Use Rust to compute 32-bit signed integers and wrap around at the boundary.",
   "main": "src/lib.js",
   "typings": "index.d.ts",
   "scripts": {
     "test": "mocha tests/**/*.test.js",
     "build": "cargo-cp-artifact -nc index.node -- cargo build --release --message-format=json-render-diagnostics",
+    "lint": "eslint src tests",
     "install": "npm run build",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test"
+    "prepublishOnly": "npm run lint && npm run test"
+    
   },
   "engines": {
     "node": ">=12"
