--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "int32",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "Use Rust to compute 32-bit signed integers and wrap around at the boundary.",
   "type": "module",
   "exports": "./lib/lib.js",
@@ -11,6 +11,7 @@
   "files": [
     "lib",
     "src",
+    "build.rs",
     "Cargo.toml"
   ],
   "scripts": {
