--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "int32"
 version = "4.0.4"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
-rust-version = "1.57"
+rust-version = "1.63"
 repository = "https://github.com/magiclen/node-int32"
 homepage = "https://magiclen.org/node-js-int32/"
-keywords = ["node.js", "int32", "overflow", "underflow"]
+keywords = ["nodejs", "int32", "overflow", "underflow"]
 categories = []
 description = "Use Rust to compute 32-bit signed integers and wrap around at the boundary."
 license = "MIT"
